git add . git commit -am 'my study result' git push

--- a/Part.1.E.3.controlflow.ipynb
+++ b/Part.1.E.3.controlflow.ipynb
@@ -1681,6 +1681,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "用`while`重写“打印0~100的质数”"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 一个投骰子赌大小的游戏"
    ]
   },
