--- a/Part.1.E.3.controlflow.ipynb
+++ b/Part.1.E.3.controlflow.ipynb
@@ -1685,6 +1685,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_prime(number):\n",
+    "    \"\"\"Check if a number is prime using a while loop.\"\"\"\n",
+    "    if number < 2:\n",
+    "        return False\n",
+    "\n",
+    "    divisor = 2\n",
+    "    while divisor <= int(number**0.5):\n",
+    "        if number % divisor == 0:\n",
+    "            return False\n",
+    "        divisor += 1\n",
+    "        \n",
+    "    return True\n",
+    "\n",
+    "# Print prime numbers less than 100 using a while loop\n",
+    "num = 2\n",
+    "while num < 10:\n",
+    "    if is_prime(num):\n",
+    "        print(num)\n",
+    "    num += 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1815,7 +1853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
